syntax = "proto3";

package threshcryptopb;

import "contextstorepb/contextstorepb.proto";
import "dslpb/dslpb.proto";

option go_package = "github.com/filecoin-project/mir/pkg/pb/threshcryptopb";

message Event {
  oneof type {
    SignShare         sign_share          = 1;
    SignShareResult   sign_share_result   = 2;
    VerifyShare       verify_share        = 3;
    VerifyShareResult verify_share_result = 4;
    VerifyFull        verify_full         = 5;
    VerifyFullResult  verify_full_result  = 6;
    Recover           recover             = 7;
    RecoverResult     recover_result      = 8;
  }
}

message SignShare {
  repeated bytes  data   = 1;
  SignShareOrigin origin = 2;
}

message SignShareResult {
  bytes           signature_share = 1;
  SignShareOrigin origin          = 2;
}

message SignShareOrigin {
  string module = 1;
  oneof type {
    contextstorepb.Origin context_store = 2;
    dslpb.Origin          dsl           = 3;
  }
}

message VerifyShare {
  repeated bytes    data            = 1;
  bytes             signature_share = 2;
  string            node_id         = 3;
  VerifyShareOrigin origin          = 4;
}

message VerifyShareResult {
  bool              ok     = 1;
  string            error  = 2;
  VerifyShareOrigin origin = 3;
}

message VerifyShareOrigin {
  string module = 1;
  oneof type {
    contextstorepb.Origin context_store = 2;
    dslpb.Origin          dsl           = 3;
  }
}

message VerifyFull {
  repeated bytes   data           = 1;
  bytes            full_signature = 2;
  VerifyFullOrigin origin         = 3;
}

message VerifyFullResult {
  bool             ok     = 1;
  string           error  = 2;
  VerifyFullOrigin origin = 3;
}

message VerifyFullOrigin {
  string module = 1;
  oneof type {
    contextstorepb.Origin context_store = 2;
    dslpb.Origin          dsl           = 3;
  }
}

message Recover {
  repeated bytes data             = 1;
  repeated bytes signature_shares = 2;
  RecoverOrigin  origin           = 3;
}

message RecoverResult {
  bytes         full_signature = 1;
  bool          ok             = 2;
  string        error          = 3;
  RecoverOrigin origin         = 4;
}

message RecoverOrigin {
  string module = 1;
  oneof type {
    contextstorepb.Origin context_store = 2;
    dslpb.Origin          dsl           = 3;
  }
}